# Phoenix-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: phoenix_build.yml  phoinix_build.yml
Phoenix/: CMakeLists.txt
Phoenix/src/: pch.h
Phoenix/src/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
Phoenix/src/Events/: ApplicationEvent.h  Event.h  KeyboardEvent.h  MouseEvent.h
Phoenix/src/Graphics/: Image.cpp  Image.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
Phoenix/src/Graphics/API/: DescriptorSet.cpp  DescriptorSet.h  Renderer.cpp  Renderer.h  UniformBuffer.cpp  UniformBuffer.h
Phoenix/src/Graphics/Buffer/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  IndexBuffer.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h
Phoenix/src/Graphics/Renderer/: VulkanRenderer.cpp  VulkanRenderer.h
Phoenix/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Phoenix/src/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Phoenix/src/Platform/Vulkan/: VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFunction.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanValidation.cpp  VulkanValidation.h
Phoenix/src/Utilities/: Timer.h
Phoinix/: CMakeLists.txt
Phoinix/src/: Phoinix.h  pch.h
Phoinix/src/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Renderer.h  Window.h
Phoinix/src/Core/Events/: ApplicationEvent.h  Event.h  MouseEvent.h
Phoinix/src/Core/Platform/Vulkan/: VulkanDevice.cpp  VulkanInstance.cpp  VulkanPipeline.cpp  VulkanPipeline.h  VulkanValidation.h  VulkanWindow.cpp  VulkanWindow.h
Phoinix/src/Core/Renderer/: VulkanRenderer.cpp  VulkanRenderer.h
Phoinix/src/Events/: ApplicationEvent.h  Event.h  KeyboardEvent.h  MouseEvent.h
Phoinix/src/Graphics/: Image.cpp  Image.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
Phoinix/src/Graphics/API/: DescriptorSet.cpp  DescriptorSet.h  Renderer.cpp  Renderer.h  UniformBuffer.cpp  UniformBuffer.h
Phoinix/src/Graphics/Buffer/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  IndexBuffer.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h
Phoinix/src/Graphics/Renderer/: VulkanRenderer.cpp  VulkanRenderer.h
Phoinix/src/ImGui/: ImConfig.h  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Phoinix/src/Phoinix/: Image.h
Phoinix/src/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Phoinix/src/Platform/Vulkan/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  IndexBuffer.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFunction.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanValidation.cpp  VulkanValidation.h  VulkanWindow.cpp  VulkanWindow.h
Phoinix/src/Renderer/: VulkanRenderer.cpp  VulkanRenderer.h
Phoinix/src/Utilities/: Timer.h
Phoinix/src/shaders/: simple.frag  simple.vert
Raytracer/: CMakeLists.txt  README.md
Raytracer/src/: Camera.cpp  Camera.h  Ray.h  RayRenderer.cpp  RayRenderer.h  Raytracer.cpp  Scene.cpp  Scene.h
Raytracer/src/Materials/: Dielectric.h  Diffuse.h  Material.cpp  Material.h  Metal.h
Raytracer/src/Objects/: HitInformation.h  Hitable.h  Sphere.cpp  Sphere.h
Raytracer/src/Utilities/: Math.h  Random.cpp  Random.h
Raytracer/src/shaders/: temp.vert
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp
Sandbox/src/shaders/: temp.frag
